Some more personal styling

--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -22,6 +22,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	background-color: white;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -135,7 +136,7 @@ h1+p {
 
 h2 {
 	font-size: 1.1em;
-	color: #bc412b;
+	color: #176fc0;
 	margin-top: 3em;
 	position: relative;
 	top: 1.4em;
